--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^2.2.0",
+    "config": "^4.1.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.0",
     "nodemon": "^3.1.10"
