--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-jwt": "^8.5.1",
     "express-validator": "^7.2.1",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "uuid": "^11.1.0"
   }
 }
