--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^5.1.0",
     "express-jwt": "^8.5.1",
     "express-validator": "^7.2.1",
+    "google-auth-library": "^10.2.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.0",
     "nodemon": "^3.1.10",
