--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.0",
     "nodemon": "^3.1.10",
+    "openai": "^5.12.2",
     "uuid": "^11.1.0"
   }
 }
