--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "config": "^4.1.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^17.2.1",
     "dotenv-flow": "^4.1.0",
     "envalid": "^8.1.0",
